--- a/styles/components/Titlebar.module.css
+++ b/styles/components/Titlebar.module.css
@@ -1,25 +1,45 @@
  
 .container{
-    width:100%;
+    width:94%;
     /* background-color: red; */
     height: 82px;
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
     color: #ffff;
+    /* background-color: #2028F2; */
+    position: absolute;
+    top:0%;
+    left: 100px;
+    margin-top: 0.25%;
 }
 .subcontainer{
-    width:35%;
-    background-color: green;
+    width:auto;
+    /* background-color: green; */
     height:70px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    border-radius: 25px;
-    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.25);
-    background-color: #2028F2;
-    opacity: 0.5;
-    position: absolute;
-    top:1%;
+    /* opacity: 0.5; */
+    margin-left: 20px;
+    color: black;
+    font-weight: bold;
+   
+}
+.subcontainer2{
+    width:20vw;
+    /* background-color: green; */
+    height:70px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* opacity: 0.5; */
+    margin-left: 20px;
+    color: black;
+    font-weight: bold;
+   
+}
+.subcontainer p{
+    margin-left: 10px !important;
 }
  
