--- a/styles/components/layout.module.css
+++ b/styles/components/layout.module.css
@@ -1,8 +1,22 @@
 .layoutcontainer{
-    min-height: 80vh;
-    width: 75vw;
+    min-height: 90%;
+    width: 70vw;
     display: flex;
     justify-content: center;
+    position: absolute;
+    top: 85px;
+
+    /* left: calc(1vw+70px); */
+    left: 100px;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.244);margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.244);
+    /* margin-top: 20px; */
 }
+ 
+/* .mainContainer{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+} */
