--- a/styles/components/profile.module.css
+++ b/styles/components/profile.module.css
@@ -1,12 +1,35 @@
 .profileContainer{
-    height: 70px;
-    aspect-ratio: 1/1;
-    background-color: #7885EE;
-    border-radius: 50%;
+    height: 90%;
+    width:20%;
+    background-color: #DBE8F0;
     position: absolute;
     right:1%;
-    top:1%;
+    top: 85px;
+
+    /* transform: translate(1% , -50%); */
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+}
+.userInfo{
+    height: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    
 }
+.CodingInfo{
+    height: 50%;
+    width: 100%;
+    background-color: #7885EE;
+
+
+}
+ 
+ 
